# Temp

./: .gitignore  ARES_DEPENDENCY_ANALYSIS.md  CEW_MERGE_REPORT.md  CONSOLIDATION_SUMMARY.md  DOCUMENTATION_REPORT.md  IRONRECON_README.md  IRONRECON_TEST_SUMMARY.md  LICENSE  MERGE_REPORT.md  PRODUCTION_READINESS_AUDIT.md  PRODUCTION_READINESS_AUDIT_REPORT.md  README.md  SBOM.spdx  SECURITY.md  consolidation_script.sh  install.sh  pytest.ini  requirements-test.txt  requirements.txt  setup.py  test_suite.py
ARES_Edge_System_SnoopLion_Complete/ares_unified/src/: CMakeLists.txt
ARES_Edge_System_SnoopLion_Complete/ares_unified/src/backscatter/src/: backscatter_communication_system.cpp  rf_energy_harvesting_system.cpp
ARES_Edge_System_SnoopLion_Complete/ares_unified/src/cew/: CEW_ARCHITECTURE.md  Makefile  README.md  cew_unified_interface.cpp:Zone.Identifier
ARES_Edge_System_SnoopLion_Complete/ares_unified/src/cew/cpu/: cew_cpu_module.cpp  (+2 more)
ARES_Edge_System_SnoopLion_Complete/ares_unified/src/neuromorphic/: README.md
ares_unified/: CMakeLists.txt  PRODUCTION_COMPLETE.md  PRODUCTION_READINESS_AUDIT.md  audit_system.sh  demo_algorithms  demo_algorithms.cpp  final_audit_assessment.sh
ares_unified/audit_results/: FINAL_AUDIT_SUMMARY.md  clang_tidy_report.txt  code_metrics.txt  code_quality_final.md  performance_verification.txt  security_analysis.txt  security_assessment_final.md  test_coverage_final.md
ares_unified/cmake/: ARESConfig.cmake
ares_unified/config/: compat.h  config.yaml
ares_unified/docs/api/: API_REFERENCE.md
ares_unified/docs/architecture/: SYSTEM_ARCHITECTURE.md
ares_unified/docs/ip_reports/: TECHNOLOGY_OVERVIEW.md
ares_unified/src/: CMakeLists.txt  main.cpp
ares_unified/src/algorithms/: CMakeLists.txt  ares_obfuscation_protocol.cpp  ares_obfuscation_protocol.h  ares_transfer_entropy.cpp  ares_transfer_entropy.h  athena_adp.cpp  athena_adp.h  helios_he.cpp  helios_he.h
ares_unified/src/api/: prometheus_interface.h  zeus_api.h
ares_unified/src/backscatter/: CMakeLists.txt
ares_unified/src/cew/: CMakeLists.txt  cew_unified_interface.cpp
ares_unified/src/cew/cpu/: cew_cpu_module.h
ares_unified/src/cew/cuda/: cew_cuda_module.h  threat_classifier_kernel.cu
ares_unified/src/cew/include/: cew_adaptive_jamming.h  cew_unified_interface.h  spectrum_waterfall.h
ares_unified/src/communication/: CMakeLists.txt
ares_unified/src/core/: CMakeLists.txt  MERGE_REPORT.md
ares_unified/src/core/cpu/: ares_core.cpp  quantum_resilient_core.cpp
ares_unified/src/core/cuda/: quantum_core.cu
ares_unified/src/core/include/: core_utils.h  neuromorphic_core.h  quantum_resilient_core.h  quantum_resilient_core_simple.h
ares_unified/src/countermeasures/: CMakeLists.txt
ares_unified/src/countermeasures/include/: destruct_mode.h
ares_unified/src/countermeasures/src/: chaos_induction_engine.cu  chaos_induction_engine_stub.cpp  chaos_kernels.cu  self_destruct_protocol.cu  self_destruct_protocol_simplified.cu
ares_unified/src/cyber_em/: CMakeLists.txt
ares_unified/src/cyber_em/src/: initialize_random_states.cu  protocol_exploitation_engine.cu
ares_unified/src/database/: relational_db.h  time_series_db.h
ares_unified/src/digital_twin/: CMakeLists.txt
ares_unified/src/digital_twin/include/: predictive_simulation_engine.h
ares_unified/src/digital_twin/kernels/: physics_simulation_kernels.cu  state_sync_kernels.cu
ares_unified/src/digital_twin/src/: predictive_simulation_engine.cu
ares_unified/src/federated_learning/: CMakeLists.txt
ares_unified/src/federated_learning/include/: federated_learning_unified_interface.h
ares_unified/src/federated_learning/src/: distributed_slam_engine.cu  homomorphic_computation_engine.cu  neuromorphic_processor_interface.cpp
ares_unified/src/hardware/: CMakeLists.txt  cuda_acceleration.cpp  cuda_acceleration.h  fpga_interface.h  neuromorphic_integration.h
ares_unified/src/identity/: CMakeLists.txt
ares_unified/src/identity/src/: hardware_attestation_system.cpp  hot_swap_identity_manager.cpp  hot_swap_identity_manager.cu
ares_unified/src/navigation/: CMakeLists.txt
ares_unified/src/neuromorphic/: CMakeLists.txt
ares_unified/src/neuromorphic/cpp/: custom_neuron_models.cpp  integrated_system.cpp  lidar_audio_integration.cpp  synaptic_models.cpp
ares_unified/src/neuromorphic/include/: loihi2_hardware_abstraction.h  loihi2_spike_encoder.h  neuromorphic_unified_interface.h  sdr_neuromorphic_bridge.h  spike_encoder.h  tpu_neuromorphic_accelerator.h  unified_neuromorphic_sensors.h
ares_unified/src/neuromorphic/kernels/: neuromorphic_simulation_kernels.cu  spike_encoding_kernel.cu
ares_unified/src/neuromorphic/lava/: LAVA_INTEGRATION_GUIDE.md  LAVA_INTEGRATION_SUMMARY.md  brian2_lava_sync.py  lava_cpp_bridge.py  test_full_integration.py
ares_unified/src/neuromorphic/mlir/: BRIAN2_INTEGRATION_SUMMARY.md  MLIR_INTEGRATION_SUMMARY.md  brian2_benchmark.py  brian2_integration.h  build_brian2_integration.sh  mlir_neuromorphic_driver.cpp  neuromorphic_dialect.td  neuromorphic_lowering.cpp  neuromorphic_lowering.h
ares_unified/src/neuromorphic/src/: loihi2_hardware_abstraction.cpp
ares_unified/src/optical_stealth/: CMakeLists.txt
ares_unified/src/optical_stealth/include/: optical_stealth_unified_interface.h
ares_unified/src/optical_stealth/src/: dynamic_metamaterial_controller.cu  rioss_synthesis_engine.cu
ares_unified/src/orchestrator/: CMakeLists.txt  pipeline_orchestrator.h
ares_unified/src/orchestrator/include/: orchestrator_unified_interface.h
ares_unified/src/perception/: CMakeLists.txt
ares_unified/src/security/: CMakeLists.txt  fips_wrapper.h  post_quantum_crypto.cpp  post_quantum_crypto.h
ares_unified/src/swarm/: CMakeLists.txt  README.md
ares_unified/src/swarm/include/: byzantine_consensus_engine.h  swarm_unified_interface.h
ares_unified/src/swarm/src/: byzantine_consensus_engine.cpp
ares_unified/src/utils/: common_utils.h
ares_unified/tests/: CMakeLists.txt
ares_unified/tests/unit_tests/: CMakeLists.txt  test_cew_basic.cpp  test_cew_performance.cpp  test_cew_security.cpp
(+103 files in other folders)
